tablet mode almost done

--- a/components/horizontalCarousel/horizontal-carousel.scss
+++ b/components/horizontalCarousel/horizontal-carousel.scss
@@ -94,4 +94,7 @@
     @include mobile{
         --gutter: 0px; // space between cards
     }
+    @include tablet{
+        --gutter: 120px; // space between cards
+    }
 }
