--- a/styles/_work.scss
+++ b/styles/_work.scss
@@ -9,7 +9,11 @@
         @include mobile{
             font-size: 32px;
             line-height: 38px;
-            text-align: center;
+        }
+        @include tablet{
+            font-size: 40px;
+            line-height: 48px;
+            margin-top: 100px;
         }
     }
     &__tags{
@@ -17,14 +21,16 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        background-color: $background;
+        position: sticky;
+        top: 140px;
+        z-index: 2;
+        padding-top: 10px;
+        padding-bottom: 16px;
         @include mobile{
-            position: sticky;
             top: 160px;
             max-width: 350px;
             flex-wrap: wrap;
-            z-index: 2;
-            background-color: $background;
-            padding-top: 10px;
         }
         .tag{
             margin: 0 10px;
@@ -53,11 +59,20 @@
             @include mobile{
                 width: 100%;
             }
+            @include tablet{
+                width: 924px;
+            }
             .case-study{
                 // transition: all 0.3s ease;
                 // display: none;
                 // display: none;
                 display: flex;
+                @include tablet{
+                    width: 300px;
+                    height: 300px;
+                    background-repeat: no-repeat;
+                    background-size: 100%;
+                }
                 &.hide{
                     
                     display: none;
