--- a/styles/_studio.scss
+++ b/styles/_studio.scss
@@ -10,6 +10,12 @@
         align-items: center;
         width: 840px;
         margin: auto;
+
+        @include tablet{
+            br{
+                display: none;
+            }
+        }
         &__main{
             width: 100%;
             font-size: 48px;
@@ -19,6 +25,11 @@
             @include mobile{
                 font-size: 32px;
                 line-height: 38px;
+            }
+            @include tablet{
+                line-height: 48px;
+                font-size: 40px;
+                width: 610px;
             }
         }
         &__description{
@@ -32,6 +43,11 @@
                 font-size: 20px;
                 line-height: 24px;
             }
+            @include tablet{
+                width: 610px;
+                font-size: 28px;
+                line-height: 34px;
+            }
         }
     }
     &__main-img{
@@ -39,6 +55,9 @@
         margin-top: 100px;
         img{
             width: 100%;
+        }
+        @include tablet{
+            width: 921px;
         }
     }
     &__text{
@@ -51,6 +70,10 @@
         @include mobile{
             font-size: 20px;
             line-height: 24px;
+        }
+        @include tablet{
+            font-size: 28px;
+            line-height: 34px;
         }
     }
 
@@ -77,6 +100,9 @@
             @include mobile{
                 width: 244px;
             }
+            @include tablet{
+                width: 373px;
+            }
         }
         &__studio3{
             width: 634px;
@@ -86,11 +112,17 @@
                 float: right;
                 margin-top: 30px;
             }
+            @include tablet{
+                width: 449px;
+            }
         }
         &__studio4{
             width: 638px;
             @include mobile{
                 width: 304px;
+            }
+            @include tablet{
+                width: 452px;
             }
         }
     }
@@ -106,6 +138,11 @@
         @include mobile{
             font-size: 48px;
             line-height: 58px;
+        }
+
+        @include tablet{
+            font-size: 72px;
+            line-height: 140px;
         }
         &__row{
             width: 100%;
@@ -172,12 +209,18 @@
                 }
 
             }
+            @include tablet{
+                width: 291px;
+            }
         }
         &__studio6{
             width: 747px;
             height: 100%;
             @include mobile{
                 width: 301px;
+            }
+            @include tablet{
+                width: 523px;
             }
 
         }
@@ -197,6 +240,14 @@
                 font-size: 20px;
                 line-height: 24px;
                 letter-spacing: 0.02em;
+                br{
+                    display: none;
+                }
+            }
+            @include tablet{
+                width: 610px;
+                line-height: 45px;
+                font-size: 28px;
                 br{
                     display: none;
                 }
