--- a/components/accordion/accordion.scss
+++ b/components/accordion/accordion.scss
@@ -3,6 +3,9 @@
     @include mobile{
         width: 100%;
     }
+    @include tablet{
+        width: 453px;
+    }
     &__container{
         border-bottom: 1px solid #C4C4C4;
         &__section{
@@ -35,6 +38,10 @@
                         font-size: 16px;
                         line-height: 24px;
                     }
+                    @include tablet{
+                        font-size: 20px;
+                        line-height: 26px;
+                    }
                 }
                 &__toggle{
                     pointer-events: none;
@@ -59,6 +66,10 @@
                 @include mobile{
                     font-size: 16px;
                     line-height: 24px;
+                }
+                @include tablet{
+                    font-size: 20px;
+                    line-height: 26px;
                 }
             }
         }
