--- a/components/processAnimation/process.scss
+++ b/components/processAnimation/process.scss
@@ -50,12 +50,20 @@
                 font-size: 36px;
                 line-height: 43px;
                 letter-spacing: 0.02em;
+                @include tablet{
+                    font-size: 28px;
+                    line-height: 34px;
+                }
             }
             &__description{
                 margin-top: 40px;
                 font-size: 24px;
                 line-height: 33px;
                 letter-spacing: 0.01em;
+                @include tablet{
+                    font-size: 20px;
+                    line-height: 26px;
+                }
             }
         }
 
