--- a/styles/_services.scss
+++ b/styles/_services.scss
@@ -13,6 +13,15 @@
                 display: none;
             }
         }
+        @include tablet{
+            width: 610px;
+            font-size: 40px;
+            line-height: 48px;
+            margin: auto;
+            br{
+                display: none;
+            }
+        }
     }
     &__services-showcase{
         margin-top: 160px;
@@ -47,21 +56,9 @@
                     line-height: 18px;
                     letter-spacing: 0.02em;
                     color: $purple;
-                    // @include mobile{
-                    //     line-height: 19px;
-                    //     font-size: 16px;
-                    //     margin-right: 10px;
-                    //     text-align: right;
-                    //     // width: 5%;
-                    //     &.first{
-                    //         width: 45%;
-                    //         text-align: left;
-                    //     }
-                    //     &:last-child{
-                    //         margin-right: 0;
-                    //         width: 55%;
-                    //     }
-                    // }
+                    @include tablet{
+                        line-height: 19px;
+                    }
                 }
             }
             &__img{
@@ -80,6 +77,9 @@
                     @include mobile{
                         width: 210px;
                     }
+                    @include tablet{
+                        width: 204px;
+                    }
                 }
             }
             &__description{
@@ -87,6 +87,11 @@
                 margin-top: 119px;
                 @include mobile{
                     width: 100%;
+                    .tag{
+                        height: 41px;
+                    }
+                }
+                @include tablet{
                     .tag{
                         height: 41px;
                     }
@@ -102,10 +107,17 @@
                         font-size: 32px;
                         line-height: 38px;
                     }
+                    @include tablet{
+                        font-size: 40px;
+                        line-height: 48px;
+                    }
                 }
 
                 &__accordiom{
                     margin-top: 60px;
+                    @include tablet{
+                        margin-top: 40px;
+                    }
                 }
             }
             &.right{
@@ -133,8 +145,21 @@
             font-size: 32px;
             line-height: 38px;
         }
+        @include tablet{
+            width: 610px;
+            font-size: 40px;
+            line-height: 48px;
+            margin: auto;
+            margin-top: 160px;
+            br{
+                display: none;
+            }
+        }
     }
     &__table{
         margin-top: 160px;
+        @include tablet{
+            margin-top: 120px;
+        }
     }
 }
