--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -91,8 +91,12 @@
         align-items: center;
         justify-content: center;
         margin-top: 100px;
+        // cursor: pointer;
+        cursor: url("/assets/cursor-work.png"), pointer;	
         &__img{
             width: 100%;
+            // cursor: url("/assets/cursor-work.png"), auto;	
+
         }
         @include mobile {
             margin-top: 40px;
