--- a/components/nav/nav.scss
+++ b/components/nav/nav.scss
@@ -7,9 +7,12 @@
     position: sticky;
     top: 0;
     background-color: $background;
-    z-index: 9;  
+    z-index: 9; 
     @include mobile {
-        padding: 50px 0 116px 0px;
+        width: 100%;
+        padding: 0 0 110px 0;
+        left: 0;
+        right: 0;
     }
     @include tablet {
     }
@@ -176,10 +179,12 @@
         position: fixed;
         background-color: $background;
         top: 0;
-        left: 30px;
-        right: 30px;
+        width: 100%;
+        padding-left: 30px;
+        padding-right: 30px;
         padding-top: 40px;
         padding-bottom: 30px;
+        left: 0;
         @include mobile{
             z-index: 9;
         }
