--- a/components/horizontalCarousel/horizontal-carousel.scss
+++ b/components/horizontalCarousel/horizontal-carousel.scss
@@ -1,7 +1,7 @@
 .h-carousel{
     width: 100%;
     height: 397px;
-    overflow-y: scroll;
+    // overflow-y: scroll;
 
     @include mobile {
         height: 270px;
