--- a/components/layout/layout.scss
+++ b/components/layout/layout.scss
@@ -10,4 +10,10 @@
     @include mobile {
         padding: 0 32px;
     }
+    .content{
+        margin-top: 126px;
+        @include tablet {
+            margin-top: 0;
+        }
+    }
 }
