layout and responsive  fixes

--- a/components/layout/layout.scss
+++ b/components/layout/layout.scss
@@ -15,5 +15,8 @@
         @include tablet {
             margin-top: 0;
         }
+        @include mobile {
+            margin-top: 0;
+        }
     }
 }
