IMplemented strapi frontedn logic and markup

--- a/components/caseStudy/case-study.scss
+++ b/components/caseStudy/case-study.scss
@@ -36,7 +36,7 @@
         background-image: url('/assets/lectures-case.png');
         background-size: 100%;
     }
-    &.moov{
+    &.MOOV{
         background-image: url('/assets/moov-case.png');
         background-size: 100%;
     }
