--- a/components/caseStudy/case-study.scss
+++ b/components/caseStudy/case-study.scss
@@ -4,6 +4,7 @@
     position: relative;
     cursor: pointer;
     transition: background, 0.5s, ease-in-out;
+    display:inline-block; 
     &:hover{
         &::after{
             transition: all, 0.5s, ease-in-out;
@@ -13,35 +14,28 @@
             bottom: 0;
             right: 0;
             width: 100%;
+            // height: 100px;
             background: url('/assets/hover-case-study.png');
             background-repeat: no-repeat;
             background-size: 100%;
-            background-position: center;	
-
+            background-position: center;
+            position: absolute;
+            pointer-events: none;
         }
+    }
+    a{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+    }
+    &__thumbnail{
+        width: 100%;
+        height: 100%;
+        transition: background, 0.5s, ease-in-out;
+        display:inline-block; 
     }
     &.olie{
         background-image: url('/assets/olie-case.png');
-        background-size: 100%;
-    }
-    &.consult{
-        background-image: url('/assets/consult-case.png');
-        background-size: 100%;
-    }
-    &.other{
-        background-image: url('/assets/other-case.png');
-        background-size: 100%;
-    }
-    &.lectures{
-        background-image: url('/assets/lectures-case.png');
-        background-size: 100%;
-    }
-    &.MOOV{
-        background-image: url('/assets/moov-case.png');
-        background-size: 100%;
-    }
-    &.eazup{
-        background-image: url('/assets/eazup-case.png');
         background-size: 100%;
     }
     &__tags{
@@ -51,6 +45,7 @@
         display: flex;
         align-items: flex-end;
         justify-content: flex-start;
+        z-index: 3;
         &__tag{
             margin: 0 4px;
             background-color: #776AF6;
