--- a/components/main.scss
+++ b/components/main.scss
@@ -9,6 +9,7 @@
 @import "./footer/footer.scss";
 @import "./caseStudy/case-study.scss";
 @import "./accordion/accordion.scss";
+@import "./accordionClosed/accordion.scss";
 @import "./table/table.scss";
 @import "./processAnimation/process.scss";
 @import "./processAnimationMobile/process.scss";
