updated social links

--- a/components/nav/nav.scss
+++ b/components/nav/nav.scss
@@ -170,6 +170,10 @@
                     margin-bottom: 9px;
                     display: flex;
                     text-align: left;
+                    a{
+                        color: #0C151A;
+                        text-decoration: none;
+                    }
                 }
             }
         }
