--- a/styles/_moov.scss
+++ b/styles/_moov.scss
@@ -93,7 +93,7 @@
             height: 170px;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: flex-end;
             .tag{
                 height: 28px;
@@ -143,7 +143,7 @@
             margin-top: 180px;
             position: relative;
             &__logo{
-                width: 157px;
+                width: 187px;
                 height: 66px;
                 position: absolute;
                 left: 440px;
@@ -153,6 +153,9 @@
                     height: 25px;
                     left: 176px;
 
+                }
+                img {
+                  width: 100%;
                 }
 
             }
