image logo final fix

--- a/styles/_moov.scss
+++ b/styles/_moov.scss
@@ -144,10 +144,14 @@
             position: relative;
             &__logo{
                 width: 187px;
-                height: 66px;
+                height: 500%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 position: absolute;
                 left: 440px;
                 top: 0;
+                top: -200%;
                 @include mobile{
                     width: 60px;
                     height: 25px;
