--- a/components/processAnimation/process.scss
+++ b/components/processAnimation/process.scss
@@ -13,6 +13,60 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        &__container__minor{
+            height: 100%;
+            display: flex;
+            position: relative;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+        &__text__minor{
+            max-width: 420px;
+            margin-left: 130px;
+            margin-top: 720px;
+            height: 100%;
+            position: sticky;
+            top: 30%;
+            transition: all 0.5s ease-in-out;
+            background-color: $background;
+            
+            &.hide{
+                opacity: 0;
+                transform: translateY(-50px);
+            }
+            &:not(.hide) {
+                opacity: 1;
+            }
+            &__slash{
+                font-size: 36px;
+                line-height: 43px;
+                letter-spacing: 0.02em;
+                color: #776AF6;
+            }
+            &__title{
+                margin-top: 10px;
+                font-weight: 600;
+                font-size: 36px;
+                line-height: 43px;
+                letter-spacing: 0.02em;
+                @include tablet{
+                    font-size: 28px;
+                    line-height: 34px;
+                }
+            }
+            &__description{
+                margin-top: 40px;
+                font-size: 24px;
+                line-height: 33px;
+                letter-spacing: 0.01em;
+                @include tablet{
+                    font-size: 20px;
+                    line-height: 26px;
+                }
+            }
+        }
+
         &__container{
             height: 100%;
             display: flex;
