text project no red

--- a/styles/_moov.scss
+++ b/styles/_moov.scss
@@ -19,7 +19,7 @@
             text-align: center;
             letter-spacing: 0.02em;
 
-            color: #BC473B;
+            color: #fff;
             @include mobile{
                 font-size: 16px;
                 line-height: 19px;
