--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -99,6 +99,7 @@
             url('/assets/cursor-work.png') 2.5x
         ), pointer;	
         &__img{
+            border-radius: 16px;
             width: 100%;
             // cursor: url("/assets/cursor-work.png"), auto;	
 
