added loading screen

--- a/components/main.scss
+++ b/components/main.scss
@@ -13,3 +13,4 @@
 @import "./table/table.scss";
 @import "./processAnimation/process.scss";
 @import "./processAnimationMobile/process.scss";
+@import "./loadingScreen/loading-screen.scss";
